--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mistaken Identity's Blog</title>
-    <meta name="description" content="">
+    <meta name="description" content="Personal Blog of Vageesh Bhasin - Musings of a Creator">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{BASE_TAG}}
@@ -13,6 +13,17 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/blog.css">
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-52401506-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+
   </head>
   <body>
     <script>
@@ -20,7 +31,9 @@
       window.EmberENV = window.BlogENV.EmberENV;
     </script>
     <script src="assets/vendor.js"></script>
+    <script src='assets/js/slides.min.js'></script>
     <script src="assets/blog.js"></script>
+    <script type="text/javascript" src="http://platform.twitter.com/widgets.js" id="twitter-wjs"></script>
     <script>
       window.Blog = require('blog/app')['default'].create(BlogENV.APP);
     </script>
